# runnr

./: CMakeLists.txt  README.md  TODO.md  meson.build
src/: :  Box.hpp  Button.cpp  Button.hpp  ColorRegistry.cpp  ColorRegistry.hpp  Components.hpp  Entity.cpp  Entity.hpp  Floor.cpp  Floor.hpp  GameOverScene.cpp  GameOverScene.hpp  GameScene.cpp  GameScene.hpp  MenuScene.cpp  MenuScene.hpp  Platform.cpp  Platform.hpp  Player.cpp  Player.hpp  PlayerCollisionCallback.cpp  PlayerCollisionCallback.hpp  Powerup.cpp  Powerup.hpp  Runnr.cpp  Runnr.hpp  Scene.hpp  SceneManager.hpp  Timer.cpp  Timer.hpp  TimerManager.hpp  bullet.hpp  main.cpp  rlights.h  runnr.cpp  runnr.hpp  utils.hpp
src/entt/: entt.hpp
src/shaders/: shadowmap.fs
